--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mariaDB://u0ient9wbubhv9pk:JWZQ1QdkDzRBLB9FSNwE@bywhjmkcgb8gcfhur6rh-mysql.services.clever-cloud.com:3306/bywhjmkcgb8gcfhur6rh
+spring.datasource.username=u0ient9wbubhv9pk
+spring.datasource.password=JWZQ1QdkDzRBLB9FSNwE
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
