--- a/back/pom.xml
+++ b/back/pom.xml
@@ -76,6 +76,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.1.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.37</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+        </dependency>
 
     </dependencies>
 
